--- a/themes/PaperMod/layouts/partials/header.html
+++ b/themes/PaperMod/layouts/partials/header.html
@@ -42,7 +42,7 @@
 <header class="header">
     <nav class="nav">
         <div class="logo">
-            <a href="https://mmint.uk/"><img src="/MMINT_Logo_White-01.png" alt=""></a>
+            <a href="https://mmint.uk/"><img src="/MMINT_Logo_White-01.png" alt="MMINT.UK" padding-top="15px"></a>
             </div>
         </div>
         {{- $currentPage := . }}
