--- a/themes/PaperMod/layouts/partials/header.html
+++ b/themes/PaperMod/layouts/partials/header.html
@@ -42,7 +42,7 @@
 <header class="header">
     <nav class="nav">
         <div class="logo">
-            <a href="https://mmint.uk/"><img src="/MMINT_Logo_White-01.png" alt="MMINT.UK" width=”50″ height=”30″ padding-top="20px"></a>
+            <a href="https://mmint.uk/"><img style="float: left; padding: 15px 5px 10px 20px;"  src="/MMINT_Logo_White-01.png" alt="MMINT.UK" width=”50″ height=”30″/></a>
             </div>
         </div>
         {{- $currentPage := . }}
