--- a/layouts/partials/header_working.html
+++ b/layouts/partials/header_working.html
@@ -42,7 +42,7 @@
 <header class="header">
     <nav class="nav">
         <div class="logo">
-            <a href="https://mmint.uk/"><img src="MMINT_Logo_New.svg" alt="MMINT.UK"/></a>
+            <a href="https://mmint.uk/"><img style="float: left; padding: 15px 0px 0px 0px;"  src="/MMINT_Logo_White-01.png" alt="MMINT.UK" width=”50″ height=”30″/></a>
             </div>
         </div>
         {{- $currentPage := . }}
