--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -42,7 +42,7 @@
 <header class="header">
     <nav class="nav">
         <div class="logo">
-            <a href="https://mmint.uk/"><img src="MMINT_Logo_New.svg" alt="MMINT.UK"/></a>
+            <a href="https://mmint.uk/">svg="/MMINT_Logo_New.svg"</a>
             </div>
         </div>
         {{- $currentPage := . }}
