--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -42,7 +42,11 @@
 <header class="header">
     <nav class="nav">
         <div class="logo">
-            <a href="https://mmint.uk/">svg="/MMINT_Logo_New.svg"</a>
+            <a href="https://mmint.uk/"><img
+                src="/MMINT_Logo_New.svg"
+                alt="MMINT.UK"
+                height="50"
+                width="30" /></a>
             </div>
         </div>
         {{- $currentPage := . }}
