--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -45,8 +45,8 @@
             <a href="https://mmint.uk/"><img
                 src="/MMINT_Logo_New.svg"
                 alt="MMINT.UK"
-                height="50"
-                width="30" /></a>
+                height="30px"
+                width="50px" /></a>
             </div>
         </div>
         {{- $currentPage := . }}
