--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -43,6 +43,7 @@
     <nav class="nav">
         <div class="logo">
             <a href="https://mmint.uk/"><img
+                style="float: left; padding: 15px 0px 0px 0px;"
                 src="/MMINT_Logo_New.svg"
                 alt="MMINT.UK"
                 height="60px"
