--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -41,9 +41,8 @@
 
 <header class="header">
     <nav class="nav">
-        <div class="logo">
+        <div class="logo" style="float: left; padding: 15px 0px 0px 0px;">
             <a href="https://mmint.uk/"><img
-                style="float: left; padding: 15px 0px 0px 0px;"
                 src="/MMINT_Logo_New.svg"
                 alt="MMINT.UK"
                 height="60px"
